<resources>
    <string name="app_name">ComeToUs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open"> Me</string>
    <string name="drawer_close"> Us</string>
    <string name="app_description">activity around us</string>
    <string name="detail_time">时间：</string>
    <string name="detail_location">地点：</string>
    <string name="detail_promoter">发起人：</string>
    <string name="detail_people_num">已报名：</string>
    <string name="loding_error">加载出错了</string>
    <string name="user_password">密码</string>
    <string name="user_name">邮箱</string>

    <string name="Sign_in">登  陆</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="join">我也参加</string>
    <string name="Registration">正在报名...</string>
    <string name="Registration_Success">报名成功</string>
    <string name="now_loding">请稍后...</string>
    <string name="about_cometous">关于</string>
    <string name="exit_cometous">登出</string>
    <string name="search_title">搜索</string>
    <string name="queit">退出</string>
    <string name="register">注   册</string>
</resources>
