<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar_color"
    android:fitsSystemWindows="true">

    <com.yalantis.phoenix.PullToRefreshView
        android:id="@+id/base_pull_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/detail_background">

            <LinearLayout
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <it.gmariotti.cardslib.library.view.CardViewNative
                    android:id="@+id/detail_title"
                    style="@style/card_external"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/location_icon" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp">

                        <TextView
                            android:id="@+id/detail_location_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="南校俱乐部"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/no_name_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="距离这里"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/detail_location_up_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="2dp"
                            android:text="湖南科技大学"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/distance_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="40dp"
                            android:paddingBottom="2dp"
                            android:text="2公里"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/clock" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp">

                        <TextView
                            android:id="@+id/start_end_time_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="6:00~8:00"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/continued_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:paddingTop="5dp"
                            android:text="2个小时"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/week_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="2dp"
                            android:text="周六"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/date_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:paddingBottom="2dp"
                            android:text="5月2日"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/person_icon" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp">

                        <TextView
                            android:id="@+id/charge_person_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="董森"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/already_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:paddingTop="5dp"
                            android:text="已经参加"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/charge_person"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="2dp"
                            android:text="负责人"
                            android:textColor="@color/text_gray_white"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="40dp"
                            android:paddingBottom="2dp"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/paerson_num_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="30"
                                android:textColor="@color/text_gray_white"
                                android:textSize="14sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="人"
                                android:textColor="@color/text_gray_white"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </RelativeLayout>

                </LinearLayout>


                <com.dd.processbutton.iml.ActionProcessButton
                    android:visibility="gone"
                    android:id="@+id/join_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/join"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    custom:pb_colorComplete="@color/green_complete"
                    custom:pb_colorNormal="@color/actionbar_color"
                    custom:pb_colorPressed="@color/blue_pressed"
                    custom:pb_colorProgress="@color/purple_progress"
                    custom:pb_textComplete="@string/Registration_Success"
                    custom:pb_textProgress="@string/Registration" />

                <com.dd.processbutton.iml.ActionProcessButton
                    android:visibility="gone"
                    android:id="@+id/detail_quit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="退出活动"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    custom:pb_colorComplete="@color/green_complete"
                    custom:pb_colorNormal="@color/actionbar_color"
                    custom:pb_colorPressed="@color/blue_pressed"
                    custom:pb_colorProgress="@color/purple_progress"
                    custom:pb_textComplete="退出成功"
                    custom:pb_textProgress="正在退出" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:src="@drawable/sea" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </com.yalantis.phoenix.PullToRefreshView>
</LinearLayout>